[package]
name = "pqc_dilithium"
version = "0.2.0"
authors = ["Mitchell Berry <foss@mitchellberry.com>"]
description = "A post-quantum cryptographic signature scheme based on the hardness of lattice problems over module lattices"
edition = "2018"
categories = ["cryptography"]
keywords = ["signature", "post-quantum", "signing"]
repository = "https://github.com/Argyle-Software/dilithium/"
license = "MIT OR Apache-2.0"
exclude = ["tests/KAT"]
rust-version = "1.50"

[dependencies]
gr = { package = "getrandom", version = "0.2.10", optional = true }
rand_core = "0.6.4"
wasm-bindgen = { version = "0.2.87", optional = true }

[dev-dependencies]
pqc_core = {version = "0.3.0", features = ["load"]}

[target.'cfg(bench)'.dev-dependencies.criterion]
version = "0.4.0"

[[bench]]
name = "api"
harness = false

[features]
default = ["mode3", "aes", "std", "getrandom"]

# By default this library uses mode3, also called Dilithium3
mode2 = []
mode3 = []
mode5 = []

# Enables AES mode which uses AES-256 in counter mode instead of SHAKE
aes = []
std = []

getrandom = ["gr", "rand_core/getrandom"]

# For compiling to wasm targets 
wasm = ["wasm-bindgen", "gr/js"]

